[package]
name = "e2e-test"
version = "0.4.0"
edition = "2021"
license-file = "../LICENSE"
publish = false

[dependencies]
radius = { version = "0.4.0", path = "../radius", default-features = false }
tokio = { version = "1.52.1", features = ["net", "time", "sync", "macros", "rt", "process", "io-util"] }

[features]
default = ["aws-lc"]
aws-lc = ["radius/aws-lc"]
rust-crypto = ["radius/rust-crypto"]
openssl = ["radius/openssl"]
