[package]
name = "examples"
version = "0.4.0"
publish = false
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/moznion/radius-rs"

[dev-dependencies]
radius = { version = "0.4.0", path = "../radius", default-features = false }
log = "0.4.11"
env_logger = "0.8.2"
tokio = { version = "1.52.1", features = ["net", "signal", "sync", "time", "macros", "rt-multi-thread"] }

[features]
default = ["aws-lc"]
aws-lc = ["radius/aws-lc"]
rust-crypto = ["radius/rust-crypto"]
openssl = ["radius/openssl"]

[[example]]
name = "server"
path = "server.rs"

[[example]]
name = "client"
path = "client.rs"

[[example]]
name = "cisco_vsa"
path = "cisco_vsa.rs"

[[example]]
name = "eap_md5"
path = "eap_md5.rs"

