[package]
name = "radius"
version = "0.4.0"
authors = ["moznion <moznion@gmail.com>"]
edition = "2021"
rust-version = "1.75"
description = "An async/await native implementation of the RADIUS server and client for Rust."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/moznion/radius-rs"
homepage = "https://github.com/moznion/radius-rs"
documentation = "https://docs.rs/radius"
categories =  ["network-programming"]
keywords = ["radius", "async"]

[dependencies]
md5 = { version = "0.7.0", optional = true }
openssl = { version = "0.10", optional = true }
aws-lc-sys = { version = "0", optional = true }
rand = { version = "0.10.1", optional = true }
thiserror = "1.0"
log = "0.4.20"
tokio = { version = "1.52.1", features = ["net", "time", "macros", "rt"] }

[features]
default = ["aws-lc"]
openssl = ["dep:openssl", "dep:rand"]
md5 = ["dep:md5", "dep:rand"]
aws-lc = ["dep:aws-lc-sys"]

