[package]
name = "radius"
version = "0.4.0"
authors = ["moznion <moznion@gmail.com>"]
edition = "2021"
rust-version = "1.75"
description = "An async/await native implementation of the RADIUS server and client for Rust."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/moznion/radius-rs"
documentation = "https://docs.rs/radius"
categories = ["network-programming"]
keywords = ["radius", "async"]
build = "build.rs"

[dependencies]
md-5 = { version = "0.10", optional = true }
md4 = { version = "0.10", optional = true }
sha1 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
openssl-sys = { version = "0", optional = true }
aws-lc-sys = { version = "0", optional = true }
rand = { version = "0.10.1", optional = true }
des = { version = "0.9", optional = true }
bytes = "1"
thiserror = "2.0.18"
log = "0"
memchr = "2"
tokio = { version = "1.52.1", features = ["net", "time", "macros", "rt"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
code-generator = { path = "../code-generator" }

[[bench]]
name = "packet"
harness = false

[[bench]]
name = "avp"
harness = false

[features]
default = ["aws-lc"]
openssl = ["dep:openssl-sys"]
rust-crypto = ["dep:md-5", "dep:md4", "dep:sha1", "dep:hmac", "dep:rand", "dep:des"]
aws-lc = ["dep:aws-lc-sys"]
